# yag-slam

./: .gitignore  CHANGELOG.org  CMakeLists.txt  Dockerfile  Makefile  README.md  build.sh  default.nix  filter_bag.py  main.cpp  package.xml  run_build.sh  run_docker.sh  setup.py  test.py
.github/workflows/: main.yaml
include/: AdditionalMath.h  BoundingBox2.h  CoordinateConverter.h  CorrelationGrid.h  CustomData.h  Functor.h  Grid.h  GridIndexLookup.h  LocalizedRangeScan.h  LocalizedRangeScanAndFinder.h  LookupArray.h  Matrix.h  Name.h  Object.h  OccupancyGrid.h  Pose.h  Quaternion.h  Rectangle2.h  ScanMatcher.h  Sensor.h  SensorData.h  SensorManager.h  Singleton.h  Size2.h  Transform.h  Vector2.h  Vector3.h
mp_slam/: __init__.py  cpp.py  generalized_graph_slam.py  graph.py  graph_slam.py  scanmatching.py  serde.py
ros1/: loc_node_ros1  serialize_bag.py  slam_node_ros1
src/: Impls.cpp  PythonInterface.cpp  ScanManager.cpp  ScanMatcher.cpp
yag_slam/: __init__.py  generalized_graph_slam.py  graph.py  graph_slam.py  helpers.py  models.py  raytracing.py  scan_matcher.py  scan_matching.py  scanmatching.py  serde.py  splicing.py
